[package]
name = "jew-notifier-bot"
version = "0.1.0"
authors = ["victor.fedorenko <fedorenko22116@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.41"
scraper = "0.12.0"
rand = "0.7.3"
telegram-bot = "0.7"
futures = "0.3.7"
